2002-03-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.[ch] (gda_data_model_to_comma_separated):
	(gda_data_model_to_tab_separated):
	(gda_data_model_to_xml): new utility functions.

2002-03-22  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-recordset.c (fetch_func): don't add
	an error in the connection if they request the last row + 1.

2002-03-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/gda-default-provider.c (get_types): implemented
	SCHEMA_TYPES schema.
	(gda_default_provider_open_connection): don't fail if the file does
	not exist. Just create an empty database.

	* libgda/gda-xml-database.[ch] (gda_xml_database_get_uri):
	(gda_xml_database_set_uri): new functions.
	Added support for queries in the XML database format.

2002-03-20  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-client.c (gda_client_finalize): call g_object_unref for
	all opened connections, not gda_connection_close, which may close
	connections in use in other places.
	(gda_client_close_all_connections): new function.

2002-03-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* providers/postgres/gda-postgres-provider.[ch]: 
	* providers/postgres/gda-postgres-recordset.c: 
	* providers/postgres/gda-postgres.h: 
	* providers/postgres/utils.c: improved performance for type mapping
	between PostgreSQL OIDs and GdaType. Fixed a couple of memory leaks.

2002-03-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* libgda/gda-value.c (gda_value_stringify): added support for
	GDA_TYPE_NUMERIC.
	* providers/postgres/gda-postgres-provider.c: added support for
	getting references. Changed some variable names.
	* providers/postgres/utils.c: added support for GDA_TYPE_NUMERIC.
	Removed some functions not used any more.
	(gda_postgres_set_field_data): don't use g_new0/g_free unless
	absolutely necessary. Don't set actual size as gda_field_set_*_value()
	already does it.
